cleanup style css 18.03 part IV

--- a/template/index.html
+++ b/template/index.html
@@ -139,7 +139,7 @@
                 <!-- header-second start -->
                 <div class="header-second clearfix">
                 <!-- main-navigation start -->
-                <div class="main-navigation main-navigation--mega-menu  animated">
+                <div class="main-navigation animated">
                   <nav class="navbar navbar-expand-lg navbar-light p-0">
                     <div class="navbar-brand clearfix hidden-lg-up">
                       <!-- logo -->
@@ -504,7 +504,7 @@
                     <div class="body">
                       <h3 class="card-title text-white">Eucalipto</h3>
                       <div class="separator"></div>
-                      <p>Seletora automática de<br> mudas florestais</p>
+                      <p>Seletora automática de<br> mudas de eucalipto</p>
                       <a class="btn btn-transparent btn-animated btn-bordered-white" href="page-case-seletora-mudas-eucalipto.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
                     </div>
                   </div>
