--- a/template/css/style.css
+++ b/template/css/style.css
@@ -1,4 +1,4 @@
-/* 1 Elements
+/* Elements
 ----------------------------------------------------------------------------- */
 img {
   display: block;
@@ -32,7 +32,7 @@ ul {
   }
 }
 
-/* 2 Layout
+/* Layout
 ----------------------------------------------------------------------------- */
 .page-wrapper {
   background-color: #ffffff;
@@ -90,17 +90,10 @@ ul {
   min-height: 100px;
 }
 
-.banner.light-translucent-bg,
-.banner.dark-translucent-bg,
-.banner.default-translucent-bg {
+.banner.dark-translucent-bg {
   min-height: 250px;
   padding-top: 70px;
   padding-bottom: 20px;
-}
-
-.banner.banner-big-height {
-  min-height: 550px;
-  padding-top: 100px;
 }
 
 .banner.video-background-banner {
@@ -139,10 +132,6 @@ ul {
 
 /* Medium devices (desktops, tablets less than 991px) */
 @media (max-width: 991px) {
-  .sidebar {
-    margin-top: 40px;
-  }
-
   .footer-content {
     padding: 10px 0;
   }
@@ -162,14 +151,6 @@ ul {
   .transparent-header .header-second {
     z-index: 21;
   }
-  /*Full width Header*/
-  .header.full-width {
-    padding: 0 15px;
-  }
-
-  .header.full-width .header-first {
-    padding: 8px 0 0;
-  }
 }
 
 /*Backgrounds
@@ -183,41 +164,8 @@ ul {
 }
 
 .dark-bg {
-  /* background-color: #2c2c2c; */
   background-color: #1e231e;
   color: #cdcdcd;
-}
-
-.dark-bg + .dark-bg:not(.image-box):not(.full-image-container):not(.full-text-container):not(.full-width-section) {
-  background-color: #555555;
-}
-
-.dark-bg + .dark-bg + .dark-bg {
-  background-color: #373737;
-}
-
-.dark-bg a:not(.btn) {
-  text-decoration: underline;
-  color: #cdcdcd;
-}
-
-.dark-bg a:not(.btn):hover {
-  text-decoration: none;
-  color: #cdcdcd;
-}
-
-.default-bg {
-  color: #ffffff;
-}
-
-.default-bg a:not(.btn) {
-  text-decoration: underline;
-  color: #ffffff;
-}
-
-.default-bg a:not(.btn):hover {
-  text-decoration: none;
-  color: #ffffff;
 }
 
 /*Translucent Backgrounds*/
@@ -434,9 +382,7 @@ ul {
   background: linear-gradient(to right, #222222 0%, #505050 35%, #505050 70%, #222222 100%);
 }
 
-.default-bg .separator:after,
-.dark-translucent-bg .separator:after,
-.default-translucent-bg .separator:after {
+.dark-translucent-bg .separator:after {
   background: rgba(255, 255, 255, 0.5);
   background: -moz-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.5) 35%, rgba(255, 255, 255, 0.5) 70%, rgba(255, 255, 255, 0) 100%);
   background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(255, 255, 255, 0)), color-stop(35%, rgba(255, 255, 255, 0.5)), color-stop(70%, rgba(255, 255, 255, 0.5)), color-stop(100%, rgba(255, 255, 255, 0)));
@@ -457,7 +403,6 @@ ul {
   filter: alpha(opacity=100);
 }
 
-.light-translucent-bg .separator:after,
 .dark.separator:after {
   background: rgba(0, 0, 0, 0.5);
   background: -moz-linear-gradient(left, transparent 0%, rgba(0, 0, 0, 0.4) 35%, rgba(0, 0, 0, 0.4) 70%, transparent 100%);
@@ -517,7 +462,6 @@ h5 + .separator {
   background: linear-gradient(to right, #444444 0%, #393939 35%, #323232 70%, #222222 100%);
 }
 
-.light-translucent-bg .separator-2:after,
 .dark.separator-2:after {
   background: rgba(0, 0, 0, 0.5);
   background: -moz-linear-gradient(left, rgba(0, 0, 0, 0.5) 0%, rgba(232, 232, 232, 0.4) 35%, rgba(232, 232, 232, 0.2) 70%, transparent 100%);
@@ -528,10 +472,7 @@ h5 + .separator {
   background: linear-gradient(to right, rgba(0, 0, 0, 0.5) 0%, rgba(232, 232, 232, 0.4) 35%, rgba(232, 232, 232, 0.2) 70%, transparent 100%);
 }
 
-.default-bg .separator-2:after,
-.default-translucent-bg .separator-2:after,
-.dark-translucent-bg .separator-2:after,
-.light.separator-2:after {
+.dark-translucent-bg .separator-2:after {
   background: rgba(255, 255, 255, 0.5);
   background: -moz-linear-gradient(left, rgba(255, 255, 255, 0.5) 0%, rgba(232, 232, 232, 0.4) 35%, rgba(232, 232, 232, 0.2) 70%, rgba(255, 255, 255, 0) 100%);
   background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(255, 255, 255, 0.5)), color-stop(35%, rgba(232, 232, 232, 0.4)), color-stop(70%, rgba(232, 232, 232, 0.2)), color-stop(100%, rgba(255, 255, 255, 0)));
@@ -646,13 +587,6 @@ h5 + .separator {
   border-radius: 100% !important;
 }
 
-/* Small devices (tablets, phones less than 767px) */
-@media (max-width: 767px) {
-  .text-center-xs {
-    text-align: center;
-  }
-}
-
 /*hide elements*/
 .hidden-xs-up {
   display: none !important;
@@ -755,138 +689,11 @@ h5 + .separator {
   }
 }
 
-/* Pages Misc
----------------------------------- */
-.icons-page i {
-  font-size: 20px;
-  width: 35px;
-  text-align: center;
-}
-
-.grid span {
-  padding: 5px 5px;
-  background-color: #666;
-  border: 1px solid #444;
-  display: block;
-  text-align: center;
-  margin-bottom: 10px;
-  color: #ffffff;
-}
 
 /* 5 Components
 ----------------------------------------------------------------------------- */
 /* Buttons
 ---------------------------------- */
-/*Buttons Color Variations*/
-.btn:focus {
-  color: inherit;
-}
-
-.btn {
-  -webkit-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-}
-
-/*Default Button*/
-.btn-default {
-  color: #ffffff;
-}
-
-.btn-default:hover,
-.btn-default:focus,
-.btn-default.focus,
-.btn-default:active,
-.btn-default.active,
-.show > .dropdown-toggle.btn-default {
-  color: #ffffff;
-}
-
-.btn-default-transparent {
-  color: #777777;
-  background-color: transparent;
-}
-
-.btn-default-transparent:hover,
-.btn-default-transparent:focus,
-.btn-default-transparent.focus,
-.btn-default-transparent:active,
-.btn-default-transparent.active,
-.show > .dropdown-toggle.btn-default-transparent {
-  color: #ffffff;
-}
-
-.dark-bg .btn-default-transparent {
-  color: #ffffff;
-}
-
-.default-bg .btn-default,
-.default-translucent-bg .btn-default,
-.default-bg .btn-default-transparent,
-.default-translucent-bg .btn-default-transparent {
-  background-color: #ffffff;
-  border-color: #ffffff;
-}
-
-.default-bg .btn-default:hover,
-.default-translucent-bg .btn-default:hover,
-.default-bg .btn-default:focus,
-.default-translucent-bg .btn-default:focus,
-.default-bg .btn-default.focus,
-.default-translucent-bg .btn-default.focus,
-.default-bg .btn-default:active,
-.default-translucent-bg .btn-default:active,
-.default-bg .btn-default.active,
-.default-translucent-bg .btn-default.active,
-.default-bg .show > .dropdown-toggle.btn-default,
-.default-translucent-bg .show > .dropdown-toggle.btn-default,
-.default-bg .btn-default-transparent:hover,
-.default-translucent-bg .btn-default-transparent:hover,
-.default-bg .btn-default-transparent:focus,
-.default-translucent-bg .btn-default-transparent:focus,
-.default-bg .btn-default-transparent.focus,
-.default-translucent-bg .btn-default-transparent.focus,
-.default-bg .btn-default-transparent:active,
-.default-translucent-bg .btn-default-transparent:active,
-.default-bg .btn-default-transparent.active,
-.default-translucent-bg .btn-default-transparent.active,
-.default-bg .show > .dropdown-toggle.btn-default-transparent,
-.default-translucent-bg .show > .dropdown-toggle.btn-default-transparent {
-  color: #ffffff;
-  background-color: transparent;
-  border-color: #ffffff;
-}
-
-.dark .btn-default {
-  color: #ffffff;
-  background-color: rgba(0, 0, 0, 0.2);
-  border-color: rgba(0, 0, 0, 0.1);
-}
-
-.dark .btn-default .badge {
-  color: rgba(0, 0, 0, 0.2);
-  background-color: #ffffff;
-}
-
-.dark .btn-default:hover,
-.dark .btn-default:focus,
-.dark .btn-default.focus,
-.dark .btn-default:active,
-.dark .btn-default.active,
-.dark .show > .dropdown-toggle.btn-default {
-  color: #ffffff;
-  background-color: rgba(0, 0, 0, 0.35);
-  border-color: rgba(0, 0, 0, 0.2);
-}
-
-/*White Button*/
-.btn-white {
-  color: #777777;
-  background-color: #ffffff;
-  border-color: #ffffff;
-}
-
-/*Buttons Sizes*/
 .btn {
   padding: 7px 20px;
   font-size: 14px;
@@ -894,6 +701,17 @@ h5 + .separator {
   line-height: 1.4666666667;
   border-radius: 3px;
   margin: 10px 0;
+  -webkit-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+
+/*White Button*/
+.btn-white {
+  color: #777777;
+  background-color: #ffffff;
+  border-color: #ffffff;
 }
 
 /*Animated Buttons*/
@@ -1179,10 +997,6 @@ h5 + .separator {
   background-color: #ffffff;
   z-index: 2;
   border-radius: 3px;
-}
-
-.light-gray-bg.shadow:before {
-  background-color: #fafafa;
 }
 
 .shadow:after {
@@ -1798,58 +1612,6 @@ h5 + .separator {
 }
 
 /*Mega Menu*/
-.mega-menu.dropdown {
-  position: static;
-}
-
-.mega-menu > a {
-  position: relative;
-}
-
-.header .navbar-nav li.mega-menu .dropdown-menu {
-  left: 0;
-  width: 100%;
-  padding: 20px 30px;
-}
-
-/* mega menu menu item */
-@media (min-width: 992px) {
-  .header.centered .col-md-12 .navbar {
-    position: static;
-  }
-}
-
-.header .navbar-nav li.mega-menu .menu {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  box-shadow: none;
-  border: none;
-  min-width: 0;
-  background-color: transparent;
-}
-
-.mega-menu .menu li {
-  position: relative;
-}
-
-.mega-menu h4.title {
-  margin: 5px 0;
-  font-size: 15px;
-  text-transform: uppercase;
-}
-
-.header .navbar-nav li.mega-menu .menu > li > a {
-  padding: 5px 0;
-  border-bottom: 1px solid #f7f7f7;
-  display: block;
-  -webkit-transition: none;
-  -o-transition: none;
-  transition: none;
-  text-align: left;
-}
-
-.mega-menu .menu > li > a i,
 .dropdown-menu > li > a i {
   padding-left: 5px;
   font-size: 12px;
@@ -1862,78 +1624,16 @@ h5 + .separator {
   color: #cdcdcd;
 }
 
-.mega-menu .menu > li > a i.fa,
 .dropdown-menu > li > a i.fa {
   width: 32px;
   text-align: center;
 }
 
-.mega-menu .menu > li > a i.fa-circle-o,
 .dropdown-menu > li > a i.fa-circle-o {
   font-size: 7px;
   top: -3px;
 }
 
-.mega-menu .menu > li > a i.fa-spin {
-  width: 11px;
-  padding: 0;
-  margin-right: 13px;
-  margin-left: 8px;
-}
-
-.mega-menu .menu > li:last-child > a {
-  border-bottom: none !important;
-}
-
-.mega-menu .menu > li > a:hover i.fa-circle-o:before,
-.dropdown-menu > li > a:hover i.fa-circle-o:before,
-.mega-menu .menu > li.active > a i.fa-circle-o:before,
-.dropdown-menu > li.active > a i.fa-circle-o:before {
-  content: "\f111";
-}
-
-/*centered logo header*/
-.col-md-12 .mega-menu--wide .dropdown-menu {
-  left: 0 !important;
-}
-
-/* Medium devices (desktops, tablets, 992px and up) */
-@media (min-width: 992px) and (max-width: 1199px) {
-  .container .mega-menu--wide .dropdown-menu {
-    width: 930px !important;
-  }
-
-  .container .col-lg-auto .mega-menu .dropdown-menu {
-    left: auto !important;
-    right: 0px !important;
-    width: 930px !important;
-  }
-}
-
-/* Large devices (Large desktops 1200px and up) */
-@media (min-width: 1200px) {
-  .container .mega-menu--wide .dropdown-menu {
-    width: 1110px !important;
-  }
-
-  .main-navigation .navbar-nav > li:first-child {
-    margin: 0;
-  }
-
-  .container .col-lg-auto .mega-menu .dropdown-menu {
-    left: auto !important;
-    right: 0px !important;
-    width: 1110px !important;
-  }
-}
-
-@media (min-width: 1500px) {
-  .container .col-lg-auto .mega-menu .dropdown-menu {
-    left: auto !important;
-    right: 0px !important;
-    width: 1110px !important;
-  }
-}
 
 /*Mobile menu*/
 .header .navbar-brand {
@@ -1982,14 +1682,6 @@ h5 + .separator {
   .header .navbar-nav .show .dropdown-menu .dropdown-header {
     padding: 12px 15px 12px 40px;
     border-color: #f9f9f9;
-  }
-  /* third level item */
-  .header .navbar-nav .show .dropdown-menu .dropdown-menu > li > a {
-    padding-left: 60px;
-  }
-  /* four level item */
-  .header .navbar-nav .show .dropdown-menu .dropdown-menu .dropdown-menu > li > a {
-    padding-left: 80px;
   }
   /* Arrow for parent menu item */
   .header .navbar-nav .dropdown-toggle::after {
@@ -2295,134 +1987,8 @@ h5 + .separator {
   color: #ffffff;
 }
 
-/*Header Dropdowns (search, cart etc)
----------------------------------- */
-/*Header Dropdowns*/
-.header-dropdown-buttons {
-  padding-top: 20px;
-}
-
-.transparent-header .header-dropdown-buttons .btn-group > .btn {
-  background-color: transparent;
-  border: 1px solid #999999;
-  color: #000000;
-}
-
-.transparent-header.gradient-background-header .header-dropdown-buttons .btn-group > .btn {
-  border: 1px solid #333333;
-}
-
-.header-dropdown-buttons .btn-group:first-child {
-  margin-right: 5px;
-}
-
-.header-dropdown-buttons .btn-group > .btn {
-  -webkit-border-radius: 100%;
-  -moz-border-radius: 100%;
-  border-radius: 100%;
-  width: 40px;
-  height: 40px;
-  padding: 0;
-  line-height: 38px;
-  text-align: center;
-  background-color: #f2f2f2;
-  border: 1px solid #e9e9e9;
-  -webkit-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-  margin: 0;
-}
-
-.header-dropdown-buttons .btn-group > .btn:hover {
-  color: #ffffff;
-}
-
-.header-dropdown-buttons .btn-group .dropdown-menu {
-  z-index: 103;
-  padding: 20px;
-  min-width: 280px;
-  margin-top: 20px;
-  top: 100%;
-  border: none;
-  -webkit-border-radius: 0 0 5px 5px;
-  -moz-border-radius: 0 0 5px 5px;
-  border-radius: 0 0 5px 5px;
-}
-
-.dark .header-dropdown-buttons .btn-group .dropdown-menu {
-  margin-top: 19px;
-}
-
-.header-dropdown-buttons .btn-group.show > .btn {
-  color: #ffffff;
-}
-
-.header.centered .header-dropdown-buttons .btn-group .dropdown-menu {
-  margin-top: 8px;
-}
-
-.dark .header-dropdown-buttons .btn-group > .btn {
-  background-color: rgba(0, 0, 0, 0.2);
-  border: 1px solid rgba(0, 0, 0, 0.15);
-  text-shadow: 1px 1px rgba(0, 0, 0, 0.7);
-  color: #cdcdcd;
-}
-
-.dark .header-dropdown-buttons .btn-group > .btn:hover {
-  background-color: rgba(0, 0, 0, 0.3);
-  border: 1px solid rgba(0, 0, 0, 0.25);
-}
-
-.dark .header-dropdown-buttons .btn-group.show > .btn {
-  background-color: rgba(0, 0, 0, 0.3);
-  border: 1px solid rgba(0, 0, 0, 0.25);
-}
-
-.btn-group.show .dropdown-animation {
-  -webkit-animation-duration: 0.3s;
-  animation-duration: 0.3s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-  -webkit-animation-name: fadeIn;
-  animation-name: fadeIn;
-}
-
-/*Header Top Dropdowns*/
-.header-top-dropdown .dropdown-menu {
-  z-index: 103;
-  padding: 20px;
-  min-width: 280px;
-  margin-top: 6px;
-  border: 1px solid #D0D0D0;
-  border-top: none;
-  background: #f2f2f2;
-  font-weight: 400;
-  -webkit-border-radius: 0 0 5px 5px;
-  -moz-border-radius: 0 0 5px 5px;
-  border-radius: 0 0 5px 5px;
-}
-
-.header-top-dropdown .login-form ul {
-  padding-left: 0;
-  list-style-position: inside;
-  margin: 15px 0 10px;
-}
-
-.header-top-dropdown .login-form .social-links {
-  padding-left: 20px;
-  margin: 0;
-}
-
-.header-top-dropdown .login-form label {
-  font-weight: 400;
-}
-
 .dark.header-top .dropdown-menu {
   border-top: none;
-}
-
-.search-box .form-group {
-  margin-bottom: 0;
 }
 
 /*Button Groups*/
@@ -2433,14 +1999,6 @@ h5 + .separator {
 .header-top .btn-group .btn {
   margin: 0;
   text-decoration: none;
-}
-
-/* Extra small devices (phones, less than 575px) */
-@media (max-width: 575px) {
-  .header-top-dropdown .dropdown-menu {
-    margin-top: 5px;
-    width: 100%;
-  }
 }
 
 
