--- a/template/index.html
+++ b/template/index.html
@@ -139,7 +139,7 @@
                 <!-- header-second start -->
                 <div class="header-second clearfix">
                 <!-- main-navigation start -->
-                <div class="main-navigation animated">
+                <div class="main-navigation main-navigation--mega-menu  animated">
                   <nav class="navbar navbar-expand-lg navbar-light p-0">
                     <div class="navbar-brand clearfix hidden-lg-up">
                       <!-- logo -->
@@ -172,9 +172,9 @@
                           <a class="section-btn nav-link dropdown-toggle" data-toggle="dropdown" href="#">Cases</a>
                           <ul class="dropdown-menu">
                             <li><a href="page-case-calibradora.html">Calibradora eletrônica de tomates</a></li>
-                            <li><a href="page-case-seletora-mudas-eucalipto">Seletora de mudas de eucalipto</a></li>
-                            <li><a href="page-case-seletora-mudas-flores">Seletora de mudas de flores</a></li>
-                            <li><a href="page-case-seletora-mudas-flores">Sistema de qualificação de uvas</a></li>
+                            <li><a href="page-case-seletora-mudas-eucalipto.html">Seletora de mudas de eucalipto</a></li>
+                            <li><a href="page-case-seletora-mudas-flores.html">Seletora de mudas de flores</a></li>
+                            <li><a href="page-case-seletora-mudas-flores.html">Sistema de qualificação de uvas</a></li>
                           </ul>
                         </li>
                         <!-- media -->
