--- a/template/page-media.html
+++ b/template/page-media.html
@@ -172,9 +172,9 @@
                           <a class="section-btn nav-link dropdown-toggle" data-toggle="dropdown" href="#">Cases</a>
                           <ul class="dropdown-menu">
                             <li><a href="page-case-calibradora.html">Calibradora eletrônica de tomates</a></li>
-                            <li><a href="page-case-seletora-mudas-eucalipto">Seletora de mudas de eucalipto</a></li>
-                            <li><a href="page-case-seletora-mudas-flores">Seletora de mudas de flores</a></li>
-                            <li><a href="page-case-seletora-mudas-flores">Sistema de qualificação de uvas</a></li>
+                            <li><a href="page-case-seletora-mudas-eucalipto.html">Seletora de mudas de eucalipto</a></li>
+                            <li><a href="page-case-seletora-mudas-flores.html">Seletora de mudas de flores</a></li>
+                            <li><a href="page-case-seletora-mudas-flores.html">Sistema de qualificação de uvas</a></li>
                           </ul>
                         </li>
                         <!-- media -->
