remove video adjust bootstrap.min

--- a/template/page-case-calibradora.html
+++ b/template/page-case-calibradora.html
@@ -37,7 +37,7 @@
     <link href='http://fonts.googleapis.com/css?family=PT+Serif' rel='stylesheet' type='text/css'>
 
     <!-- Bootstrap core CSS -->
-    <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Font Awesome CSS -->
     <link href="fonts/font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -205,13 +205,7 @@
 
       <!-- banner start -->
       <!-- ================ -->
-      <div class="banner dark-translucent-bg video-background pv-40 dark-translucent-bg hovered">
-        <div class="video-background-poster" style="background-image: url('');"></div>
-        <video autoplay loop muted style="top: auto; bottom: 0; left: 0;" poster="">
-          <source src="videos/video-case-1.mp4" type="video/mp4">
-          <source src="videos/background-video.webm" type="video/webm">
-        </video>
-        
+      <div class="banner dark-translucent-bg" style="background-image:url('images/page-case-1-banner.png'); background-position: 50% 27%;">
         <div class="container">
           <div class="row justify-content-lg-center">
             <div class="col-lg-8 text-center pv-20">
