--- a/template/index.html
+++ b/template/index.html
@@ -260,7 +260,7 @@
                 <!-- slide 1 end -->
                 
                 <!-- slide 2 start -->
-                <li class="text-center" data-transition="fade" data-slotamount="default" data-masterspeed="default" data-title="Máquinas Inteligentes">
+                <li class="text-center" data-transition="fade" data-slotamount="default" data-masterspeed="default" data-title="Soluções Inteligentes">
                 <!-- main image -->
                 <img src="images/bg-slider-1.png" alt="slidebg2" data-bgposition="center top"  data-bgrepeat="no-repeat" data-bgfit="cover" class="rev-slidebg">
                 <!-- Transparent Background -->
