--- a/template/css/typography.css
+++ b/template/css/typography.css
@@ -188,6 +188,12 @@ h6 {
     font-size: 60px;
     font-weight: 700;
   }
+
+  .mobile-caption {
+    font-size: 28px !important;
+    line-height: 35px !important;
+    font-weight: 300;
+  }
 }
 
 .page-title {
